Attempted to add sort to the list of students on Student/Index view. Not working yet.

--- a/ContosoUniversity/Views/Student/Index.cshtml
+++ b/ContosoUniversity/Views/Student/Index.cshtml
@@ -9,6 +9,7 @@
 <table class="table">
     <tr>
         <th>
+            @Html.ActionLink("Last Name", "Index", new {sortOrder = @Model.NameSortOrder})
             Last Name
         </th>
         <th>
